# automatas

./: .gitignore  CMakeLists.txt  README.md  automata.c  automata.dot  automata.h  build_instructions.txt  main.c
include/: LinkedList.h  Set.h  automata.h  readAutomata.h  writeAutomata.h
src/: automata.c  main.c  readAutomata.c  runAutomata.c  toAFD.c  writeAutomata.c
src/utils/: LinkedList.c  Set.c
test/: testAFNtoAFD.c  testIntegrity.c  testIntegrity1.c  testIntegrity2.c  testIntegrity3.c  testReadAutomata.c  testRunAutomata.c  testWriteAutomata.c
test/files/: automataIT1.dot  automataIT2.dot  automataIT3.dot
